# fractal-llm

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  RESEARCH_AND_RESULTS.md  claude-research.md  codex-research.md  main.py  pyproject.toml  repo_snapshot.md  research.md
eval/: eval_cuad.py  run_lmeval.py
eval/tasks/cuad/: cuad.yaml  utils.py
scripts/: chat_devpod.sh  grid_sweep.sh  multi_devpod_sweep.sh  probe_batch_size.sh  repo_to_file.py  repro_check.sh
src/: chat.py  eval_samples.py  finetune.py  finetune_cuad.py  finetune_modal_app.py  grid_sweep_summary.py  make_zoom_animation.py  modal_app.py  nanochat_modal.py  visualize.py
src/_nanochat_shims/: rustbpe.py
